# ai-

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
docs/: syntax.md
docs/superpowers/plans/: 2026-06-10-cdsl-collections-logic-multiline.md  2026-06-10-cdsl-full-features.md  2026-06-13-language-upgrade.md
docs/superpowers/specs/: 2026-06-10-cdsl-collections-logic-multiline.md  2026-06-10-cdsl-design.md  2026-06-10-error-system-design.md
src/: builtins.rs  cache.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs
tests/: basic.rs  builtins_new.rs  error_system.rs  integration.rs  interpreter.rs  lexer.rs  parser.rs
